[gd_scene load_steps=2 format=3 uid="uid://m1jnv5re5n5g"]

[ext_resource type="Script" path="res://screens/hud/hud.gd" id="1_r4l4f"]

[node name="HUD" type="CanvasLayer" groups=["Interface"]]
script = ExtResource("1_r4l4f")

[node name="GameInfoContainer" type="VBoxContainer" parent="."]
offset_right = 48.0
offset_bottom = 40.0

[node name="Margins" type="MarginContainer" parent="GameInfoContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16

[node name="GameInfo" type="VBoxContainer" parent="GameInfoContainer/Margins"]
layout_mode = 2

[node name="Timer" type="Label" parent="GameInfoContainer/Margins/GameInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "TIMER"

[node name="ManaCounter" type="Label" parent="GameInfoContainer/Margins/GameInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "MANA"

[node name="TimeLimit" type="Timer" parent="."]

[node name="DelayRestart" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="TimeLimit" to="." method="_on_time_limit_timeout"]
[connection signal="timeout" from="DelayRestart" to="." method="_on_delay_restart_timeout"]
